The merge is done and verified